static/style.css
body {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
	text-align: center;
	margin: 0;
}

#content-wrapper {flex: 1 0 auto;}
#page-footer {flex-shrink: 0; margin: 7px;}

#consent-form .h1 {text-decoration: underline;}
#consent-form .section {font-weight: bold;}
#consent-form .summary {font-style: italic;}

.btn-primary {font-size: large; font-weight: bold;}

#qualtrics-frame {border: none; width: 100%; height: 100%; display: none;}

#webgl-content * {margin: 0; padding: 0}
#webgl-content {margin: 0 auto; display: table}

#webgl-content .logo, .progress {position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
#webgl-content .logo {background: url('progressLogo.Light.png') no-repeat center / contain; width: 154px; height: 130px;}
#webgl-content .progress {height: 18px; width: 141px; margin-top: 90px;}
#webgl-content .progress .empty {background: url('progressEmpty.Light.png') no-repeat right / cover; float: right; width: 100%; height: 100%; display: inline-block;}
#webgl-content .progress .full {background: url('progressFull.Light.png') no-repeat left / cover; float: left; width: 0%; height: 100%; display: inline-block;}

#webgl-content .logo.Dark {background-image: url('progressLogo.Dark.png');}
#webgl-content .progress.Dark .empty {background-image: url('progressEmpty.Dark.png');}
#webgl-content .progress.Dark .full {background-image: url('progressFull.Dark.png');}

#webgl-content .footer {margin-top: 5px; line-height: 38px; font-family: Helvetica, Verdana, Arial, sans-serif; font-size: 18px;}
#webgl-content .footer .webgl-logo, .title, .fullscreen {height: 100%; display: inline-block; background: transparent center no-repeat;}
#webgl-content .footer .title {margin-right: 10px; float: right;}
#webgl-content .footer .fullscreen {background-image: url('fullscreen.png'); width: 38px; height: 38px; float: right;}

